fixed card font size when in medium size, the email was wrapping to second line. I want in on same line all the time. Made the Navbar a little smaller to take up less screen space. made the white color of the navbar and my contact cards a slightly gray white color so the contrast isnt so big

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,6 @@
 
 #mainNav {
   font-size: 1.4em;
-
   padding-top: 0;
   padding-bottom: 0;
   border-bottom: none;
@@ -68,13 +67,13 @@
 #mainNav .nav-link {
   -webkit-transition: none;
   transition: none;
-  padding: 1rem 1rem 0.2rem;
+  padding: 0.5rem 1.25rem 0.15rem;
   color: rgba(255, 255, 255, 0.5);
 }
 
 #mainNav .nav-link.active {
   color: rgba(255, 255, 255, 0.75);
-  padding: 1rem 1rem 0.2rem;
+  padding: 0.5rem 1.25rem 0.15rem;
   border-bottom: 0.25rem solid #64a19d;
 }
 
@@ -87,12 +86,12 @@
  }
 
 #mainNav.navbar-shrink {
-  background-color: #fff;
+  background-color: #E3E3E3;
 }
 
 #mainNav.navbar-shrink .nav-link {
   color: #161616;
-  padding: 1rem 1rem 0.2rem;
+  padding: 0.5rem 1.25rem 0.15rem;
   border-bottom: 0.25em solid transparent;
 }
 
@@ -231,7 +230,7 @@
   font-size: 1rem;
   border: 0;
   border-bottom: 0.30rem solid #64a19d;
-  background-color: #FFFFFF;
+  background-color: #E3E3E3;;
 }
 
 .contact-section .card h4 {
@@ -281,7 +280,11 @@ footer {
 
 
 @media screen and (min-width: 576px) {    }
-@media screen and (min-width: 768px) {    } 
+@media screen and (min-width: 768px) {
+  .card-lower-text {
+    font-size: 0.75em;
+  }
+} 
 @media screen and (min-width: 992px) {
   #share {
     top: 28%;
@@ -314,6 +317,9 @@ footer {
   .projects-section .container{
     padding-left: 6rem;
     padding-right: 6rem;
+  }
+  .card-lower-text {
+    font-size: 1em;
   }
 } 
 @media screen and (min-width: 1400px) {
